--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/material": "^6.1.8",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
